--- a/Admin/templates/categorys/admin_category_form.html
+++ b/Admin/templates/categorys/admin_category_form.html
@@ -7,24 +7,24 @@
 {% block content %}
 <div class="form-container">
     
-    <h2>{% if form.instance.pk %}Edit Category{% else %}Add New Category{% endif %}</h2>
+    <h2>{% if category.id %}Edit Category{% else %}Add New Category{% endif %}</h2>
     
     <form method="post" novalidate>
         {% csrf_token %}
 
         <div>
             <label for="id_name">Category Name:</label>
-            <input type="text" name="name" id="id_name" required>
+            <input type="text" name="name" id="id_name" value={% if category.id %}{{category.name}}{% endif %}>
             </div>
         
         <div>
             <label for="id_description">Description:</label>
-            <textarea name="description" id="id_description" rows="4"></textarea>
+            <textarea name="description" id="id_description" rows="4">{% if category.id %}{{ category.description }}{% endif %}</textarea>
             </div>
         
         <div class="form-actions">
             <button type="button" class="btn-back" onclick="history.back()">Back</button>
-            <button type="submit" class="btn-save">Save Category</button>
+            <button type="submit" class="btn-save">{% if category.id %}Update Category{% else %}Save Category{% endif %}</button>
         </div>
     </form>
 </div>
