bug : User authentication is All done . Fixed all errors and corrected all the names

--- a/accounts/templates/accounts/activate_account.html
+++ b/accounts/templates/accounts/activate_account.html
@@ -35,7 +35,7 @@
         </div>
         <div id="resend-container" style="display:none;">
             Didn't receive the code? 
-            <a href="#" id="resend-link">Resend code</a>
+            <a href="{% url "resent_otp" %}" id="resend-link">Resend code</a>
         </div>
     </div>
 </div>
