refactor : Apply Coupon is added ,Discount are added in the product Details Page

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 {% load static %}
-
 {% block title %}{{ product.name }}{% endblock title %}
 
 {% block extra_styles %}
@@ -8,74 +7,150 @@
 {% endblock extra_styles %}
 
 {% block content %}
-<div class="product-detail-container">
-    
-    <div class="product-gallery">
-        <div class="gallery-main img-zoom-container">
 
-            <span class="product-offer-tag">30% OFF</span>
-            <img src="{{ product.image.url }}" alt="{{ product.name }}" id="main-product-image">
-        </div>
-        <div class="gallery-thumbnails">
-            {% for image in images_list_limited %}
-            <img src="{{ image.image.url }}" alt="{{ product.name }}" class="thumbnail-img" data-image="{{ image.image.url }}">
-            {% endfor %}
-        </div>
-    </div>
+<div class="product-detail-page-wrapper">
 
-    <div id="imageModal" class="image-modal">
-        <span class="close-modal">&times;</span>
-        <img class="modal-content" id="modalImage">
-    </div>
-
-    <div class="product-info">
-        <h1>{{ product.name }}</h1>
-        <div class="product-price-container">
-            <del>₹ {{ product.base_price }}</del>
-            <span class="offer-price">₹ {{ product.offer_price }}</span>
-        </div>
-
-        <div class="product-options">
-            <div class="option-group">
-                <div class="option-header">
-                    <span><strong>Size:</strong></span>
-                    <span id="selected-size"></span>
-                </div>
-                <div class="option-buttons size-buttons">
-                    {% for size in sizes %}
-                        <button class="btn-size" data-size="{{ size }}">{{ size.size }}</button>
-                    {% endfor %}
-                </div>
+    <div class="product-detail-container">
+        
+        <div class="product-gallery">
+            <div class="gallery-main img-zoom-container">
+                <span class="product-offer-tag">30% OFF</span>
+                <img src="{{ product.image.url }}" alt="{{ product.name }}" id="main-product-image">
             </div>
-
-            <div class="option-group">
-                <label for="quantity-display" class="quantity-label"><strong>Quantity</strong></label>
-                <div class="quantity-selector">
-                    <button class="btn-quantity" id="btn-decrease"><i class='bx bx-minus'></i></button>
-                    <span id="quantity-display">1 item</span>
-                    <button class="btn-quantity" id="btn-increase"><i class='bx bx-plus'></i></button>
-                </div>
+            <div class="gallery-thumbnails">
+                {% for image in images_list_limited %}
+                <img src="{{ image.image.url }}" alt="{{ product.name }}" class="thumbnail-img" data-image="{{ image.image.url }}">
+                {% endfor %}
             </div>
         </div>
 
-        <div class="action-buttons">
-            <button class="btn btn-outline">Add to Cart</button>
-            <button class="btn btn-solid">Buy Now</button>
+        <div id="imageModal" class="image-modal">
+            <span class="close-modal">&times;</span>
+            <img class="modal-content" id="modalImage">
         </div>
 
-        <div class="secondary-actions">
-            <a href="#" class="action-link"><i class='bx bx-heart'></i> <span>Add to Wishlist</span></a>
-            <a href="#" class="action-link"><i class='bx bx-share'></i> <span>Share</span></a>
+        <div class="product-info">
+            
+            <h1>{{ product.name }}</h1>
+
+            <div class="product-review-summary">
+                <div class="stars">
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                </div>
+                <span class="review-count">(128 reviews)</span>
+            </div>
+
+            <div class="product-price-container">
+                <del>₹ {{ product.base_price }}</del>
+                <span class="offer-price">₹ {{ product.offer_price }}</span>
+            </div>
+
+            {% comment %} <div class="info-accordion-group">
+
+                <details class="info-accordion">
+                    <summary class="info-accordion-header">
+                        Apply Coupon
+                    </summary>
+                    <div class="info-accordion-content">
+                        <form class="apply-coupon-form-compact">
+                            <input type="text" class="apply-coupon-input-compact" placeholder="Enter coupon code">
+                            <button type="submit" class="apply-coupon-btn-compact">Apply</button>
+                        </form>
+                    </div>
+                </details>
+            </div> {% endcomment %}
+
+
+            <div class="product-options">
+                <div class="option-group">
+                    <label class="option-label"><strong>Size:</strong></label>
+                    <div class="option-buttons size-buttons">
+                        {% for size in sizes %}
+                            <button class="btn-size" data-size="{{ size }}">{{ size.size }}</button>
+                        {% endfor %}
+                    </div>
+                </div>
+
+                <div class="option-group">
+                    <label for="quantity-display" class="quantity-label option-label"><strong>Quantity</strong></label>
+                    <div class="quantity-selector">
+                        <button class="btn-quantity" id="btn-decrease"><i class='bx bx-minus'></i></button>
+                        <span id="quantity-display">1 item</span>
+                        <button class="btn-quantity" id="btn-increase"><i class='bx bx-plus'></i></button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="action-buttons">
+                <button class="btn btn-outline">Add to Cart</button>
+                <button class="btn btn-solid">Buy Now</button>
+            </div>
+
+            <div class="secondary-actions">
+                <a href="#" class="action-link"><i class='bx bx-heart'></i> <span>Add to Wishlist</span></a>
+                <a href="#" class="action-link"><i class='bx bx-share'></i> <span>Share</span></a>
+            </div>
+            
+            <br>
+
+            <details class="info-accordion description-accordion">
+                <summary class="info-accordion-header">Description</summary>
+                <div class="info-accordion-content">
+                    {{ product.description|linebreaks }}
+                </div>
+            </details>
+            <details class="info-accordion"> <summary class="info-accordion-header">
+                        Available Offers
+                    </summary>
+                    <div class="info-accordion-content">
+                        <ul class="offer-list">
+                            <li class="offer-item">
+                                <span class="offer-tag offer-tag-sale">SALE</span>
+                                <span>Get 30% off on all orders above ₹1500</span>
+                            </li>
+                            <li class="offer-item">
+                                <span class="offer-tag offer-tag-bogo">BOGO</span>
+                                <span>Buy 2 t-shirts and get 1 free</span>
+                            </li>
+                            <li class="offer-item">
+                                <span class="offer-tag offer-tag-ship">SHIP</span>
+                                <span>Free shipping on all orders above ₹999</span>
+                            </li>
+                        </ul>
+                    </div>
+                </details>
+                
+                <details class="info-accordion">
+                    <summary class="info-accordion-header">
+                        Discount Coupons
+                    </summary>
+                    <div class="info-accordion-content">
+                        <ul class="coupon-list">
+                            <li class="coupon-item">
+                                <div class="coupon-details">
+                                    <span class="coupon-code">NEWUSER20</span>
+                                    <span class="coupon-description">20% off for new users</span>
+                                </div>
+                                <a href="#" class="coupon-apply-link">Apply</a>
+                            </li>
+                            <li class="coupon-item">
+                                <div class="coupon-details">
+                                    <span class="coupon-code">SUMMER10</span>
+                                    <span class="coupon-description">10% off on summer collection</span>
+                                </div>
+                                <a href="#" class="coupon-apply-link">Apply</a>
+                            </li>
+                        </ul>
+                    </div>
+                </details>
         </div>
-<br>
-        <details class="description-accordion">
-            <summary class="description-header">Description</summary>
-            <div class="description-content">{{ product.description|linebreaks }}</div>
-        </details>
     </div>
-</div>
 
-<div class="customer-reviews-container">
+  <div class="customer-reviews-container">
   <h2>Customer Reviews</h2>
   <div class="reviews-summary">
     <div class="average-rating">
@@ -91,9 +166,7 @@
     </div>
     <button class="btn btn-outline" id="btn-write-review">Write a Review</button>
   </div>
-
   <div class="review-list">
-    {% comment %} Example of a loop: {% for review in reviews %} {% endcomment %}
     <div class="review-item">
       <div class="review-header">
         <span class="review-author">Nithin S.</span>
@@ -110,7 +183,6 @@
         Excellent quality shirt! The fit is perfect and the material feels very premium. Exactly as described. Highly recommend.
       </p>
     </div>
-
     <div class="review-item">
       <div class="review-header">
         <span class="review-author">Arjun</span>
@@ -127,7 +199,6 @@
         Good shirt, but the color was slightly different than the picture. Still, the quality is nice.
       </p>
     </div>
-    {% comment %} {% endfor %} {% endcomment %}
   </div>
 </div>
 <div class="related-products-container">
@@ -157,7 +228,7 @@
                         <h3 class="product-card-name">{{ random_product.name }}</h3>
                         <div class="product-card-price-container">
                             <del>₹ {{ random_product.base_price }}</del>
-                            <span class="offer-price">₹ {{ random_product.offer_price }}</span>
+                            <span class="offer-price">₹ {{ related_product.offer_price }}</span>
                         </div>
                     </div>
                 </a>
@@ -165,7 +236,7 @@
         {% endfor %}
     </div>
 </div>
-{% endblock content %}
+</div> {% endblock content %}
 
 {% block extra_script %}
 <script>
@@ -183,7 +254,6 @@
             });
         });
 
-
         // --- Size Selector ---
         const sizeButtons = document.querySelectorAll('.btn-size');
         const selectedSize = document.getElementById('selected-size');
@@ -198,7 +268,6 @@
                 }
             });
         });
-
         
         // --- Quantity Selector ---
         const decreaseBtn = document.getElementById('btn-decrease');
@@ -229,7 +298,6 @@
 
         updateDisplay(); // Initial call to set state
 
-
         // --- Image Zoom Logic ---
         const galleryMain = document.querySelector('.gallery-main');
      
@@ -248,7 +316,8 @@
         galleryMain.addEventListener('mouseleave', function() {
             mainImage.style.transformOrigin = 'center center';
         });
-                // --- Image Click to Enlarge (Modal) ---
+
+        // --- Image Click to Enlarge (Modal) ---
         const modal = document.getElementById('imageModal');
         const modalImg = document.getElementById('modalImage');
         const closeModal = document.querySelector('.close-modal');
@@ -274,8 +343,6 @@
                 modal.style.display = 'none';
             }
         });
-
-
     });
 </script>
 {% endblock extra_script %}
